# Geometry-Library

./: .gitignore  README.md  pyproject.toml
geometry_lib/: shapes.py
tests/: test_shapes.py
