[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "geometry-library"          # имя пакета (должно быть уникальным на PyPI)
version = "0.1.0"                 # версия
description = "Library for computing areas of geometric shapes"
authors = [
  { name="sorrymorning", email="aakhmetgalievr@gmail.com" }
]
readme = "README.md"              # описание (можно убрать, если нет)
requires-python = ">=3.8"         # минимальная версия Python
license = "MIT"                   # тип лицензии

[tool.setuptools]
packages = ["geometry_lib"]